# BerryMinerContract

./: Anchor.toml
programs/baked-beans/: Cargo.toml
programs/baked-beans/src/: error.rs  lib.rs  utils.rs
programs/baked-beans/src/instructions/: buy_oranges.rs  hatch_oranges.rs  initialize.rs  mod.rs  sell_oranges.rs  set_admin.rs  set_config.rs  set_treasury.rs  start_mine.rs
programs/baked-beans/src/states/: global_state.rs  user_state.rs
